# ee364bfinal

./: .gitignore  CHANGES.md  Makefile  README.md  pyproject.toml
colab/: run_all.ipynb
configs/: ablation.yaml  congestion.yaml  counterfactual.yaml  epsilon_sweep.yaml  kmeans_strata.yaml  mef.yaml  methods_comparison.yaml  methods_comparison_5seed.yaml  methods_comparison_dc.yaml  methods_comparison_missing50.yaml  methods_comparison_tightcaps.yaml  pjm_like.yaml  pjm_smoke.yaml  screening.yaml  smoke.yaml  smoke_congestion.yaml  smoke_counterfactual.yaml  smoke_dc.yaml  smoke_epsilon.yaml  smoke_kmeans.yaml  smoke_mef.yaml  smoke_missing.yaml  smoke_screening.yaml  smoke_timing.yaml  smoke_warmstart.yaml  synthetic_small.yaml  timing.yaml  warmstart.yaml
paper/: README.md  main.aux  main.out  main.tex  midterm.aux  midterm.out  midterm.tex
poster/: Makefile  poster.aux  poster.tex
scripts/: _common.py  check_mlp_budget.py  make_paper_figures.py  run.py  run_ablation.py  run_diurnal.py  run_identifiability.py  run_mef_analysis.py  run_mef_validation.py  run_methods_comparison.py  run_noise_sweep.py  run_pjm_like.py  run_recovery_curve.py  run_sweep.py  run_synthetic_experiment.py
src/inverse_opf/: __init__.py  analysis.py  baselines.py  baselines_kkt.py  baselines_regression.py  cache.py  config.py  dc_opf.py  graph.py  io.py  losses.py  metrics.py  model.py  (+5 more)
src/inverse_opf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_forward_kkt.py  test_identifiability.py  test_jacobian_fd.py  test_kkt_baseline.py  test_pipeline.py
