[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inverse-opf"
version = "0.1.0"
description = "Inverse DC-OPF via differentiable convex optimization"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Carlo Schreiber" }
]
dependencies = [
  # Pinned to compatible-release of the currently working stack.
  # See CHANGES.md for the exact versions used to produce reported results.
  "numpy~=2.4",
  "scipy~=1.17",
  "cvxpy~=1.8",
  "cvxpylayers~=1.1",
  "scs~=3.2",
  "torch~=2.11",
  "scikit-learn~=1.8",
  "matplotlib~=3.10",
  "pandas~=3.0",
  "seaborn~=0.13",
  "pyyaml~=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=9.0",
  "ruff~=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
